# sesi-2/docs/swagger.json
@@ -1,10 +1,24 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "This is a sample server celler server.",
+        "title": "Swagger Example Book API",
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "name": "API Support",
+            "url": "http://www.swagger.io/support",
+            "email": "support@swagger.io"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
+        "version": "1.0"
     },
+    "host": "localhost:8080",
+    "basePath": "/api/v1",
     "paths": {
-        "/api/v1/book": {
+        "/book": {
             "post": {
                 "description": "Create a single book by providing title, author, and desc",
                 "consumes": [
@@ -14,6 +28,17 @@
                     "application/json"
                 ],
                 "summary": "Create a single book",
+                "parameters": [
+                    {
+                        "description": "Sample payload",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Book"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -84,7 +109,7 @@
                 }
             }
         },
-        "/api/v1/book/{id}": {
+        "/book/{id}": {
             "get": {
                 "description": "Get a single book by providing its ID",
                 "consumes": [
@@ -94,6 +119,15 @@
                     "application/json"
                 ],
                 "summary": "Get a single book",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Sample payload",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -172,6 +206,24 @@
                     "application/json"
                 ],
                 "summary": "Update a single book",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Book ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Sample payload",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Book"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -250,6 +302,15 @@
                     "application/json"
                 ],
                 "summary": "Delete a single book",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Sample payload",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -320,7 +381,7 @@
                 }
             }
         },
-        "/api/v1/books": {
+        "/books": {
             "get": {
                 "description": "Create multiple books",
                 "consumes": [
@@ -465,5 +526,14 @@
                 }
             }
         }
+    },
+    "securityDefinitions": {
+        "BasicAuth": {
+            "type": "basic"
+        }
+    },
+    "externalDocs": {
+        "description": "OpenAPI",
+        "url": "https://swagger.io/resources/open-api/"
     }
 }
